kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: apt-cacher-ng
  labels:
    name: apt-cacher-ng
spec:
  type: ClusterIP
  #type: LoadBalancer
  ports:
    - port: 3142
      targetPort: 3142
      protocol: TCP
  selector:
    name: apt-cacher-ng
