kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apt-cacher-ng
  annotations:
    #certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.class: nginx
spec:
  #tls:
  #- hosts:
  #  - apt.cl.wuenscheonline.de
  #  secretName: apt-cacher-ng-tls
  rules:
  - host: apt.cl.wuenscheonline.de
    http:
      paths:
      - backend:
          serviceName: apt-cacher-ng
          servicePort: 3142
        path: /
